--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
+        "case-sensitive-paths-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
         "deepmerge": "^4.2.2",
         "jquery": "^3.2",
@@ -25,6 +26,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vuetify": "^2.4.4"
+        "vuetify": "^2.4.4",
+        "vuetify-loader": "^1.7.2"
     }
 }
