--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "vuetify": "^2.4.4",
-        "vuetify-loader": "^1.5.0"
+        "vuetify-loader": "^1.5.0",
+        "vuex": "^3.6.2"
     }
 }
